--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bytesoftio/tag",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "author": "Maxim Kott",
   "license": "MIT",
   "main": "dist/index.js",
@@ -24,14 +24,14 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@bytesoftio/docster": "^1.0.0",
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.9.1",
+    "doctoc": "^1.4.0",
     "jest": "^25.1.0",
     "lodash": "^4.17.15",
     "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3",
-    "@bytesoftio/docster": "^1.0.0",
-    "doctoc": "^1.4.0"
+    "typescript": "^3.8.3"
   }
 }
